tests/errors/item-macro-unsupported-item.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(struct Generated {
  value: i64,
});

fn main() -> i64 {
  return 0;
}
